small fix in the navigation. section revealing functionality added using Intersection Observer API

--- a/css/style.css
+++ b/css/style.css
@@ -1,383 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,300;9..144,400;9..144,500;9..144,700&display=swap");
-*,
-::after,
-::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  font-size: 62.5%;
-  scroll-behavior: smooth;
-  scroll-padding: 7rem; }
-
-body {
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-  line-height: 1.7;
-  background-color: #eee; }
-
-.u-center-text {
-  text-align: center !important; }
-
-.u-margin-bottom-small {
-  margin-bottom: 2rem !important; }
-
-.u-margin-bottom-medium {
-  margin-bottom: 4rem !important; }
-
-.u-margin-bottom-big {
-  margin-bottom: 8rem !important; }
-
-.u-margin-left {
-  margin-left: 7rem !important; }
-
-.u-margin-top-small {
-  margin-top: 2rem !important; }
-
-.u-margin-top-big {
-  margin-top: 10rem !important; }
-
-.u-margin-top-huge {
-  margin-top: 25rem !important; }
-
-.heading--primary {
-  font-family: "Fraunces", serif;
-  font-size: 3.8rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #eee;
-  letter-spacing: 0.8rem;
-  word-spacing: 1.7rem;
-  text-align: center;
-  -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, 0.3));
-  text-shadow: 0 1.1rem 2.1rem rgba(0, 0, 0, 0.2); }
-
-.heading--secondary {
-  font-family: "Fraunces", serif;
-  font-size: 1.8rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #333;
-  letter-spacing: 0.16rem; }
-
-.heading--tertiary {
-  font-family: "Fraunces", serif;
-  font-size: 1.6rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #333;
-  letter-spacing: 0.16rem; }
-
-.paragraph {
-  font-size: 1.2rem;
-  line-height: 1.4;
-  font-weight: 400;
-  color: #302d2d; }
-
-@keyframes animate {
-  0% {
-    opacity: 0;
-    transform: translateY(-100%); }
-  50% {
-    opacity: 1;
-    transform: translateY(-50%); }
-  100% {
-    opacity: 1;
-    transform: translateY(0); } }
-
-::selection {
-  background-color: #55c57a;
-  color: #f7f7f7; }
-
-.fixed {
-  background-color: #426b63;
-  color: #302d2d; }
-
-.navbar {
-  padding: 1.5rem 2rem;
-  height: 7rem;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  z-index: 2000; }
-  .navbar__image {
-    height: 15px; }
-  .navbar__items {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; }
-    @media (max-width: 37.5em) {
-      .navbar__items {
-        display: none; } }
-  .navbar__item {
-    margin: 0.5rem 1rem; }
-    .navbar__item:last-child {
-      border: 2px solid #f7f7f7;
-      background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
-      background-size: 250%;
-      transition: all 0.4s; }
-    .navbar__item:hover {
-      background-position: 100%; }
-  .navbar__link:link, .navbar__link:visited {
-    display: inline-block;
-    text-decoration: none;
-    font-size: 1.4rem;
-    color: #f7f7f7;
-    font-weight: 500;
-    padding: 0.5rem 2.6rem;
-    color: #eee;
-    transition: all 0.3s; }
-  .navbar__link:hover {
-    color: #333;
-    border-bottom: 1px solid #eee;
-    transform: scale(1.07); }
-  .navbar__link:active {
-    transform: scale(0.6); }
-  .navbar__toggle {
-    cursor: pointer;
-    position: relative;
-    display: none;
-    z-index: 10000; }
-    @media (max-width: 37.5em) {
-      .navbar__toggle {
-        display: block; } }
-    .navbar__toggle--checkbox {
-      display: none; }
-    .navbar__toggle--label {
-      cursor: pointer; }
-    .navbar__toggle--span {
-      position: relative; }
-      .navbar__toggle--span, .navbar__toggle--span::before, .navbar__toggle--span::after {
-        display: inline-block;
-        width: 20px;
-        height: 2.1px;
-        background-color: #eee;
-        transition: all 0.2s; }
-      .navbar__toggle--span::before, .navbar__toggle--span::after {
-        content: "";
-        position: absolute;
-        left: 0; }
-      .navbar__toggle--span::before {
-        top: -5px; }
-      .navbar__toggle--span::after {
-        top: 5px; }
-    .navbar__toggle--checkbox:checked + .navbar__toggle--label .navbar__toggle--span {
-      background: transparent; }
-    .navbar__toggle--checkbox:checked + .navbar__toggle--label .navbar__toggle--span::before {
-      top: 0;
-      transform: rotate(135deg); }
-    .navbar__toggle--checkbox:checked + .navbar__toggle--label .navbar__toggle--span::after {
-      top: 0;
-      transform: rotate(-135deg); }
-
-.mobile__menu {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  list-style: none;
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
-  z-index: 10; }
-
-.btn--text:link, .btn--text:visited {
-  display: inline-block;
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  font-weight: 700;
-  text-decoration: none;
-  color: #333;
-  padding: 0.3rem 1rem;
-  border: 2px solid #3d9b88;
-  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #3d9b88 50%);
-  background-size: 250%;
-  transition: all 0.2s; }
-
-.btn--text:hover {
-  background-position: 100%;
-  color: #f7f7f7; }
-
-.btn--text:active {
-  transform: translateY(0.3rem); }
-
-.testimonial {
-  padding: 3rem 10%;
-  text-align: center; }
-  .testimonial__image {
-    width: 10rem;
-    height: 10rem;
-    border-radius: 50%; }
-  .testimonial__description {
-    font-family: "Roboto", sans-serif;
-    font-size: 1.2rem;
-    font-weight: 300;
-    color: #302d2d; }
-  .testimonial__author {
-    margin: 1rem 0; }
-    .testimonial__author--name {
-      font-family: "Fraunces", sans-serif;
-      font-size: 2.1rem;
-      font-weight: 700;
-      color: #302d2d; }
-    .testimonial__author--designation {
-      font-family: "Roboto", sans-serif;
-      font-size: 1.2rem;
-      font-weight: 400;
-      color: #333; }
-
-.header__logo {
-  display: inline-block;
-  height: 5rem;
-  position: absolute;
-  left: 50%;
-  bottom: 5%;
-  animation: animate 0.8s infinite; }
-
-.nav {
-  height: 27rem; }
-
-.features__item {
-  min-height: 40rem; }
-  .features__item--1 {
-    background-image: linear-gradient(to right, #f7f7f7, #eee);
-    background-size: cover;
-    background-position: center; }
-  .features__item--2 {
-    background-image: url(../img/image-transform-large.jpg);
-    background-size: cover;
-    background-position: center; }
-  .features__item--3 {
-    background-image: url(../img/image-stand-out-large.jpg);
-    background-size: cover;
-    background-position: center; }
-  .features__item--4 {
-    background-image: linear-gradient(to right, #f7f7f7, #eee);
-    background-size: cover;
-    background-position: center; }
-  .features__item--5 {
-    background-image: url(../img/image-graphic-design-large.jpg);
-    background-size: cover;
-    padding: 3rem 20%;
-    text-align: center;
-    background-position: center; }
-  .features__item--6 {
-    background-image: url(../img/image-photography-large.jpg);
-    background-size: cover;
-    padding: 3rem 20%;
-    text-align: center;
-    background-position: center; }
-
-.testimonials__heading {
-  font-family: "Fraunces", serif;
-  font-size: 3.2rem;
-  font-weight: 300;
-  text-transform: uppercase;
-  color: #302d2d;
-  letter-spacing: 0.5rem;
-  word-spacing: 1.2rem;
-  text-align: center;
-  margin: 5rem 0; }
-
-.testimonials__container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); }
-  @media (max-width: 37.5em) {
-    .testimonials__container {
-      grid-template-columns: 1fr; } }
-
-.preview {
-  height: 30rem; }
-  .preview--1 {
-    background-image: url(../img/image-gallery-milkbottles.jpg);
-    background-size: cover;
-    background-position: center; }
-  .preview--2 {
-    background-image: url(../img/image-gallery-cone.jpg);
-    background-size: cover;
-    background-position: center; }
-  .preview--3 {
-    background-image: url(../img/image-gallery-orange.jpg);
-    background-size: cover;
-    background-position: center; }
-  .preview--4 {
-    background-image: url(../img/image-gallery-sugar-cubes.jpg);
-    background-size: cover;
-    background-position: center; }
-
-.footer__heading {
-  font-family: "Fraunces", sans-serif;
-  font-size: 2.1rem;
-  font-weight: 700;
-  color: #302d2d; }
-
-.footer__items {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .footer__items:not(:last-child) {
-    padding-bottom: 5rem; }
-
-.footer__item {
-  margin: 0 1rem;
-  cursor: pointer; }
-
-.footer__link:link, .footer__link:visited {
-  display: inline-block;
-  text-decoration: none;
-  font-size: 1.3rem;
-  font-weight: 400;
-  color: #426b63;
-  transition: all 0.3s; }
-
-.footer__link:hover {
-  color: #eee; }
-
-.footer__icon {
-  filter: invert(0%) sepia(0%) saturate(45%) hue-rotate(303deg) brightness(114%) contrast(100%); }
-  .footer__icon:hover {
-    filter: invert(100%) sepia(0%) saturate(2245%) hue-rotate(303deg) brightness(114%) contrast(100%); }
-
-.header {
-  position: relative;
-  height: 100vh;
-  width: 100%;
-  background-image: url(../img/image-header-large.jpg);
-  background-size: cover;
-  background-position: center;
-  z-index: 1; }
-
-.features {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); }
-  @media (max-width: 37.5em) {
-    .features {
-      grid-template-columns: 1fr; } }
-
-.testimonials {
-  background-color: #f7f7f7;
-  padding: 5rem 0; }
-
-.previews {
-  padding-top: 5rem;
-  background-color: #f7f7f7;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); }
-  @media (max-width: 37.5em) {
-    .previews {
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr); } }
-
-.footer {
-  background-color: #3d9b88;
-  padding: 7rem 0 3rem 0;
-  text-align: center; }
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,300;9..144,400;9..144,500;9..144,700&display=swap");*,::after,::before{margin:0;padding:0;box-sizing:inherit}html{font-size:62.5%;scroll-behavior:smooth;scroll-padding:5rem}body{box-sizing:border-box;font-family:"Roboto", sans-serif;line-height:1.7;background-color:#eee}.u-center-text{text-align:center !important}.u-margin-bottom-small{margin-bottom:2rem !important}.u-margin-bottom-medium{margin-bottom:4rem !important}.u-margin-bottom-big{margin-bottom:8rem !important}.u-margin-left{margin-left:7rem !important}.u-margin-top-small{margin-top:2rem !important}.u-margin-top-big{margin-top:10rem !important}.u-margin-top-huge{margin-top:25rem !important}.heading--primary{font-family:"Fraunces", serif;font-size:3.8rem;font-weight:700;text-transform:uppercase;color:#eee;letter-spacing:0.8rem;word-spacing:1.7rem;text-align:center;-webkit-box-reflect:below -20px linear-gradient(transparent, rgba(0,0,0,0.3));text-shadow:0 1.1rem 2.1rem rgba(0,0,0,0.2)}@media (max-width: 56.25em){.heading--primary{font-size:2.8rem}}@media (max-width: 37.5em){.heading--primary{font-size:1.8rem;letter-spacing:0.2rem;word-spacing:0.4rem}}.heading--secondary{font-family:"Fraunces", serif;font-size:1.8rem;font-weight:700;text-transform:uppercase;color:#333;letter-spacing:0.16rem}.heading--tertiary{font-family:"Fraunces", serif;font-size:1.6rem;font-weight:700;text-transform:uppercase;color:#333;letter-spacing:0.16rem}.paragraph{font-size:1.2rem;line-height:1.4;font-weight:400;color:#302d2d}@keyframes animate{0%{opacity:0;transform:translateY(-100%)}50%{opacity:1;transform:translateY(-50%)}100%{opacity:1;transform:translateY(0)}}::-moz-selection{background-color:#55c57a;color:#f7f7f7}::selection{background-color:#55c57a;color:#f7f7f7}.fixed{background-color:#426b63;color:#302d2d}.section__hidden{opacity:0;transform:translateY(10rem)}.navbar{padding:1.5rem 2rem;height:7rem;width:100%;display:flex;justify-content:space-between;align-items:center;position:fixed;z-index:2000}.navbar__image{height:15px}.navbar__items{list-style:none;display:flex;justify-content:space-between;align-items:center}@media (max-width: 37.5em){.navbar__items{display:none}}.navbar__item{margin:0.5rem 1rem}.navbar__item:last-child{border:2px solid #f7f7f7;background-image:linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);background-size:250%;transition:all 0.4s}.navbar__item:hover{background-position:100%}.navbar__link:link,.navbar__link:visited{display:inline-block;text-decoration:none;font-size:1.4rem;color:#f7f7f7;font-weight:500;padding:0.5rem 2.6rem;color:#eee;transition:all 0.3s}.navbar__link:hover{color:#333;border-bottom:1px solid #eee;transform:scale(1.07)}.navbar__link:active{transform:scale(0.6)}.navbar__toggle{cursor:pointer;position:relative;display:none;margin:0 0.4rem;width:25px;height:20px;z-index:10000}@media (max-width: 37.5em){.navbar__toggle{display:inline-block}}.navbar__toggle--span{position:relative;display:block;width:20px;height:1.5px;background-color:#eee;transition:all 0.3s ease;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)}.navbar__toggle--span-top{top:6px}.navbar__toggle--span-bottom{top:14px}.mobile__menu{position:absolute;top:0;left:0;width:100vw;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;list-style:none;background-color:#426b63;z-index:10}.hamburger .navbar__toggle--span-top{left:0;top:14px;transform:rotate(135deg)}.hamburger .navbar__toggle--span-middle{background:transparent}.hamburger .navbar__toggle--span-bottom{left:0;transform:rotate(-135deg)}.btn--text:link,.btn--text:visited{display:inline-block;text-transform:uppercase;font-size:1.4rem;font-weight:700;text-decoration:none;color:#333;padding:0.3rem 1rem;border:2px solid #3d9b88;background-image:linear-gradient(120deg, transparent 0%, transparent 50%, #3d9b88 50%);background-size:250%;transition:all 0.2s}.btn--text:hover{background-position:100%;color:#f7f7f7}.btn--text:active{transform:translateY(0.3rem)}.testimonial{padding:3rem 10%;text-align:center}.testimonial__image{width:10rem;height:10rem;border-radius:50%}.testimonial__description{font-family:"Roboto", sans-serif;font-size:1.2rem;font-weight:300;color:#302d2d}.testimonial__author{margin:1rem 0}.testimonial__author--name{font-family:"Fraunces", sans-serif;font-size:2.1rem;font-weight:700;color:#302d2d}.testimonial__author--designation{font-family:"Roboto", sans-serif;font-size:1.2rem;font-weight:400;color:#333}.header__logo{display:inline-block;height:5rem;position:absolute;left:50%;bottom:5%;animation:animate 0.8s infinite}.nav{height:27rem}.features__item{min-height:40rem}.features__item--1{background-image:linear-gradient(to right, #f7f7f7, #eee);background-size:cover;background-position:center}.features__item--2{background-image:url(../img/image-transform-large.jpg);background-size:cover;background-position:center}.features__item--3{background-image:url(../img/image-stand-out-large.jpg);background-size:cover;background-position:center}.features__item--4{background-image:linear-gradient(to right, #f7f7f7, #eee);background-size:cover;background-position:center}.features__item--5{background-image:url(../img/image-graphic-design-large.jpg);background-size:cover;padding:3rem 20%;text-align:center;background-position:center}.features__item--6{background-image:url(../img/image-photography-large.jpg);background-size:cover;padding:3rem 20%;text-align:center;background-position:center}.testimonials__heading{font-family:"Fraunces", serif;font-size:3.2rem;font-weight:300;text-transform:uppercase;color:#302d2d;letter-spacing:0.5rem;word-spacing:1.2rem;text-align:center;margin:5rem 0}.testimonials__container{display:grid;grid-template-columns:repeat(3, 1fr)}@media (max-width: 37.5em){.testimonials__container{grid-template-columns:1fr}}.preview{height:30rem}.preview--1{background-image:url(../img/image-gallery-milkbottles.jpg);background-size:cover;background-position:center}.preview--2{background-image:url(../img/image-gallery-cone.jpg);background-size:cover;background-position:center}.preview--3{background-image:url(../img/image-gallery-orange.jpg);background-size:cover;background-position:center}.preview--4{background-image:url(../img/image-gallery-sugar-cubes.jpg);background-size:cover;background-position:center}.footer__heading{font-family:"Fraunces", sans-serif;font-size:2.1rem;font-weight:700;color:#302d2d}.footer__items{list-style:none;display:flex;justify-content:center;align-items:center}.footer__items:not(:last-child){padding-bottom:5rem}.footer__item{margin:0 1rem;cursor:pointer}.footer__link:link,.footer__link:visited{display:inline-block;text-decoration:none;font-size:1.3rem;font-weight:400;color:#426b63;transition:all 0.3s}.footer__link:hover{color:#eee}.footer__icon{filter:invert(0%) sepia(0%) saturate(45%) hue-rotate(303deg) brightness(114%) contrast(100%)}.footer__icon:hover{filter:invert(100%) sepia(0%) saturate(2245%) hue-rotate(303deg) brightness(114%) contrast(100%)}.header{position:relative;height:100vh;width:100%;background-image:url(../img/image-header-large.jpg);background-size:cover;background-position:center;z-index:1}.features{display:grid;grid-template-columns:repeat(2, 1fr);transition:all 0.2s ease}@media (max-width: 37.5em){.features{grid-template-columns:1fr}}.testimonials{background-color:#f7f7f7;padding:5rem 0;transition:all 0.2s ease}.previews{padding-top:5rem;background-color:#f7f7f7;display:grid;grid-template-columns:repeat(4, 1fr);transition:all 0.2s ease}@media (max-width: 37.5em){.previews{grid-template-columns:repeat(2, 1fr);grid-template-rows:repeat(2, 1fr)}}.footer{background-color:#3d9b88;padding:7rem 0 3rem 0;text-align:center;transition:all 0.2s ease}
