--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -10,7 +10,7 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
-  scroll-padding: 7rem; }
+  scroll-padding: 5rem; }
 
 body {
   box-sizing: border-box;
@@ -50,10 +50,17 @@ body {
   color: #eee;
   letter-spacing: 0.8rem;
   word-spacing: 1.7rem;
-  margin-top: 20rem;
   text-align: center;
   -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, 0.3));
   text-shadow: 0 1.1rem 2.1rem rgba(0, 0, 0, 0.2); }
+  @media (max-width: 56.25em) {
+    .heading--primary {
+      font-size: 2.8rem; } }
+  @media (max-width: 37.5em) {
+    .heading--primary {
+      font-size: 1.8rem;
+      letter-spacing: 0.2rem;
+      word-spacing: 0.4rem; } }
 
 .heading--secondary {
   font-family: "Fraunces", serif;
@@ -76,8 +83,6 @@ body {
   line-height: 1.4;
   font-weight: 400;
   color: #302d2d; }
-  .paragraph--1, .paragraph--2 {
-    color: #999; }
 
 @keyframes animate {
   0% {
@@ -97,6 +102,10 @@ body {
 .fixed {
   background-color: #426b63;
   color: #302d2d; }
+
+.section__hidden {
+  opacity: 0;
+  transform: translateY(10rem); }
 
 .navbar {
   padding: 1.5rem 2rem;
@@ -145,38 +154,28 @@ body {
     cursor: pointer;
     position: relative;
     display: none;
+    margin: 0 0.4rem;
+    width: 25px;
+    height: 20px;
     z-index: 10000; }
     @media (max-width: 37.5em) {
       .navbar__toggle {
-        display: block; } }
-    .navbar__toggle--checkbox {
-      display: none; }
-    .navbar__toggle--label {
-      cursor: pointer; }
+        display: inline-block; } }
     .navbar__toggle--span {
-      position: relative; }
-      .navbar__toggle--span, .navbar__toggle--span::before, .navbar__toggle--span::after {
-        display: inline-block;
-        width: 20px;
-        height: 2.1px;
-        background-color: #eee;
-        transition: all 0.2s; }
-      .navbar__toggle--span::before, .navbar__toggle--span::after {
-        content: "";
-        position: absolute;
-        left: 0; }
-      .navbar__toggle--span::before {
-        top: -5px; }
-      .navbar__toggle--span::after {
-        top: 5px; }
-    .navbar__toggle--checkbox:checked + .navbar__toggle--label .navbar__toggle--span {
-      background: transparent; }
-    .navbar__toggle--checkbox:checked + .navbar__toggle--label .navbar__toggle--span::before {
-      top: 0;
-      transform: rotate(135deg); }
-    .navbar__toggle--checkbox:checked + .navbar__toggle--label .navbar__toggle--span::after {
-      top: 0;
-      transform: rotate(-135deg); }
+      position: relative;
+      display: block;
+      width: 20px;
+      height: 1.5px;
+      background-color: #eee;
+      transition: all 0.3s ease;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
+      .navbar__toggle--span-top {
+        top: 6px; }
+      .navbar__toggle--span-bottom {
+        top: 14px; }
 
 .mobile__menu {
   position: absolute;
@@ -189,8 +188,20 @@ body {
   justify-content: center;
   align-items: center;
   list-style: none;
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+  background-color: #426b63;
   z-index: 10; }
+
+.hamburger .navbar__toggle--span-top {
+  left: 0;
+  top: 14px;
+  transform: rotate(135deg); }
+
+.hamburger .navbar__toggle--span-middle {
+  background: transparent; }
+
+.hamburger .navbar__toggle--span-bottom {
+  left: 0;
+  transform: rotate(-135deg); }
 
 .btn--text:link, .btn--text:visited {
   display: inline-block;
@@ -211,82 +222,6 @@ body {
 
 .btn--text:active {
   transform: translateY(0.3rem); }
-
-.header {
-  position: relative;
-  height: 100vh;
-  width: 100%;
-  background-image: url(../img/image-header-large.jpg);
-  background-size: cover;
-  background-position: center;
-  z-index: 1; }
-  .header__logo {
-    display: inline-block;
-    height: 5rem;
-    position: absolute;
-    left: 50%;
-    bottom: 5%;
-    animation: animate 0.8s infinite; }
-
-.nav {
-  height: 27rem; }
-
-.features {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); }
-  @media (max-width: 37.5em) {
-    .features {
-      grid-template-columns: 1fr; } }
-  .features__item {
-    min-height: 40rem; }
-    .features__item--1 {
-      background-image: linear-gradient(to right, #f7f7f7, #eee);
-      background-size: cover;
-      background-position: center; }
-    .features__item--2 {
-      background-image: url(../img/image-transform-large.jpg);
-      background-size: cover;
-      background-position: center; }
-    .features__item--3 {
-      background-image: url(../img/image-stand-out-large.jpg);
-      background-size: cover;
-      background-position: center; }
-    .features__item--4 {
-      background-image: linear-gradient(to right, #f7f7f7, #eee);
-      background-size: cover;
-      background-position: center; }
-    .features__item--5 {
-      background-image: url(../img/image-graphic-design-large.jpg);
-      background-size: cover;
-      padding: 3rem 20%;
-      text-align: center;
-      background-position: center; }
-    .features__item--6 {
-      background-image: url(../img/image-photography-large.jpg);
-      background-size: cover;
-      padding: 3rem 20%;
-      text-align: center;
-      background-position: center; }
-
-.testimonials {
-  background-color: #f7f7f7;
-  padding: 5rem 0; }
-  .testimonials__heading {
-    font-family: "Fraunces", serif;
-    font-size: 3.2rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    color: #302d2d;
-    letter-spacing: 0.5rem;
-    word-spacing: 1.2rem;
-    text-align: center;
-    margin: 5rem 0; }
-  .testimonials__container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); }
-    @media (max-width: 37.5em) {
-      .testimonials__container {
-        grid-template-columns: 1fr; } }
 
 .testimonial {
   padding: 3rem 10%;
@@ -313,15 +248,65 @@ body {
       font-weight: 400;
       color: #333; }
 
-.previews {
-  padding-top: 5rem;
-  background-color: #f7f7f7;
+.header__logo {
+  display: inline-block;
+  height: 5rem;
+  position: absolute;
+  left: 50%;
+  bottom: 5%;
+  animation: animate 0.8s infinite; }
+
+.nav {
+  height: 27rem; }
+
+.features__item {
+  min-height: 40rem; }
+  .features__item--1 {
+    background-image: linear-gradient(to right, #f7f7f7, #eee);
+    background-size: cover;
+    background-position: center; }
+  .features__item--2 {
+    background-image: url(../img/image-transform-large.jpg);
+    background-size: cover;
+    background-position: center; }
+  .features__item--3 {
+    background-image: url(../img/image-stand-out-large.jpg);
+    background-size: cover;
+    background-position: center; }
+  .features__item--4 {
+    background-image: linear-gradient(to right, #f7f7f7, #eee);
+    background-size: cover;
+    background-position: center; }
+  .features__item--5 {
+    background-image: url(../img/image-graphic-design-large.jpg);
+    background-size: cover;
+    padding: 3rem 20%;
+    text-align: center;
+    background-position: center; }
+  .features__item--6 {
+    background-image: url(../img/image-photography-large.jpg);
+    background-size: cover;
+    padding: 3rem 20%;
+    text-align: center;
+    background-position: center; }
+
+.testimonials__heading {
+  font-family: "Fraunces", serif;
+  font-size: 3.2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #302d2d;
+  letter-spacing: 0.5rem;
+  word-spacing: 1.2rem;
+  text-align: center;
+  margin: 5rem 0; }
+
+.testimonials__container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); }
+  grid-template-columns: repeat(3, 1fr); }
   @media (max-width: 37.5em) {
-    .previews {
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr); } }
+    .testimonials__container {
+      grid-template-columns: 1fr; } }
 
 .preview {
   height: 30rem; }
@@ -342,31 +327,75 @@ body {
     background-size: cover;
     background-position: center; }
 
+.footer__heading {
+  font-family: "Fraunces", sans-serif;
+  font-size: 2.1rem;
+  font-weight: 700;
+  color: #302d2d; }
+
+.footer__items {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .footer__items:not(:last-child) {
+    padding-bottom: 5rem; }
+
+.footer__item {
+  margin: 0 1rem;
+  cursor: pointer; }
+
+.footer__link:link, .footer__link:visited {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1.3rem;
+  font-weight: 400;
+  color: #426b63;
+  transition: all 0.3s; }
+
+.footer__link:hover {
+  color: #eee; }
+
+.footer__icon {
+  filter: invert(0%) sepia(0%) saturate(45%) hue-rotate(303deg) brightness(114%) contrast(100%); }
+  .footer__icon:hover {
+    filter: invert(100%) sepia(0%) saturate(2245%) hue-rotate(303deg) brightness(114%) contrast(100%); }
+
+.header {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background-image: url(../img/image-header-large.jpg);
+  background-size: cover;
+  background-position: center;
+  z-index: 1; }
+
+.features {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  transition: all 0.2s ease; }
+  @media (max-width: 37.5em) {
+    .features {
+      grid-template-columns: 1fr; } }
+
+.testimonials {
+  background-color: #f7f7f7;
+  padding: 5rem 0;
+  transition: all 0.2s ease; }
+
+.previews {
+  padding-top: 5rem;
+  background-color: #f7f7f7;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  transition: all 0.2s ease; }
+  @media (max-width: 37.5em) {
+    .previews {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr); } }
+
 .footer {
   background-color: #3d9b88;
   padding: 7rem 0 3rem 0;
-  text-align: center; }
-  .footer__heading {
-    font-family: "Fraunces", sans-serif;
-    font-size: 2.1rem;
-    font-weight: 700;
-    color: #302d2d; }
-  .footer__items {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .footer__items:not(:last-child) {
-      padding-bottom: 5rem; }
-  .footer__item {
-    margin: 0 1rem;
-    cursor: pointer; }
-  .footer__link:link, .footer__link:visited {
-    display: inline-block;
-    text-decoration: none;
-    font-size: 1.3rem;
-    font-weight: 400;
-    color: #426b63;
-    transition: all 0.3s; }
-  .footer__link:hover {
-    color: #eee; }
+  text-align: center;
+  transition: all 0.2s ease; }
